--- a/soccer/webapp/build.xml
+++ b/soccer/webapp/build.xml
@@ -13,7 +13,9 @@
             file="src/java/applicationQueue.properties" comment="Application properties">
             <entry  key="gov.nih.nci.queue.repository.dir" value="${gov.nih.nci.queue.repository.dir}"/>
             <entry  key="gov.nih.cit.soccer.output.dir" value="${gov.nih.cit.soccer.output.dir}"/>
-            <entry  key="gov.nih.cit.soccer.wordnet.dir" value="${gov.nih.cit.soccer.wordnet.dir}"/>            
+            <entry  key="gov.nih.cit.soccer.wordnet.dir" value="${gov.nih.cit.soccer.wordnet.dir}"/>   
+            <entry  key="gov.nih.cit.soccer.r.file" value="${gov.nih.cit.soccer.r.file}"/>  
+            <entry  key="gov.nih.cit.soccer.rscript" value="${gov.nih.cit.soccer.rscript}"/> 
             <entry  key="resource.queue.connectionfactory" value="${resource.queue.connectionfactory}"/>
             <entry  key="resource.queue.name" value="${resource.queue.name}"/>
         </propertyfile>
@@ -65,6 +67,7 @@
             <classpath refid="compile.classpath"/>
         </javac>
         <copy file="src/java/applicationQueue.properties" todir="build/classes"/>
+		<copy file="src/SoccerResultPlot.R" todir="build/classes"/>
     </target>
     <target name="war" depends="compile" >
         <war needxmlfile="false"
