--- a/soccer/client/src/computingApp.properties
+++ b/soccer/client/src/computingApp.properties
@@ -1,8 +1,8 @@
 #Application properties
-#Mon, 16 Mar 2015 09:46:01 -0400
+#Thu, 09 Apr 2015 17:05:50 -0400
 # Application properties, DO NOT MODIFY.
-queue.remote.url=tcp\://localhost\:61616?trace\=false&soTimeout\=60000
+queue.remote.url=tcp\://nciws-d354-v.nci.nih.gov\:61616?trace\=false&soTimeout\=60000
 queue.remote.name=soccerqueue
 # DO NOT MODIFY THE ABOVE SETTINGS.
-soccer.remote.web.host=localhost
+soccer.remote.web.host=nciws-d354-v.nci.nih.gov
 soccer.remote.web.port=8080
