--- a/soccer/client/build.properties
+++ b/soccer/client/build.properties
@@ -1,4 +1,10 @@
-soccer.remote.web.host=nciws-d354-v.nci.nih.gov
+soccer.remote.web.host=localhost
 soccer.remote.web.port=8080
+tomee.dir=C:/apache-tomee-1.7.1-plus
+gov.nih.cit.soccer.wordnet.dir=C:/Program Files (x86)/WordNet/2.0/dict
+gov.nih.cit.soccer.rscript=C:/Program Files (x86)/R-3.1.2/bin/RScript.exe
 queue.remote.url=tcp\://${soccer.remote.web.host}\:61616?trace\=false&soTimeout\=60000
 queue.remote.name=soccerqueue
+gov.nih.cit.soccer.output.dir=${tomee.dir}/webapps/soccer/files
+gov.nih.cit.soccer.r.file=${tomee.dir}/webapps/soccer/WEB-INF/classes/SoccerResultPlot.R
+
