--- a/soccer/client/src/computingApp.properties
+++ b/soccer/client/src/computingApp.properties
@@ -1,8 +1,11 @@
 #Application properties
-#Thu, 09 Apr 2015 17:05:50 -0400
+#Mon, 20 Apr 2015 10:31:54 -0400
+soccer.remote.web.host=localhost
+soccer.remote.web.port=8080
+#Application properties
+#Fri, 17 Apr 2015 18:36:09 -0400
 # Application properties, DO NOT MODIFY.
-queue.remote.url=tcp\://nciws-d354-v.nci.nih.gov\:61616?trace\=false&soTimeout\=60000
+queue.remote.url=tcp\://localhost\:61616?trace\=false&soTimeout\=60000
 queue.remote.name=soccerqueue
 # DO NOT MODIFY THE ABOVE SETTINGS.
-soccer.remote.web.host=nciws-d354-v.nci.nih.gov
-soccer.remote.web.port=8080
+
