--- a/soccer/client/build.xml
+++ b/soccer/client/build.xml
@@ -8,6 +8,19 @@
             </not>
         </condition>
     </fail>
+    <!-- first create our properties -->
+    <condition property="isMac">
+      <os family="mac" />
+    </condition>
+    <condition property="isWindows">
+      <os family="windows" />
+    </condition>
+    <condition property="isUnix">
+      <os family="unix" />
+    </condition>
+    <target name="os">
+        <echo message="OS: isMac: ${isMac}; isWindows: ${isWindows}; isUnix: ${isUnix};"></echo>
+    </target>
     <target name="pre-init">
         <propertyfile
             file="src/computingApp.properties" comment="Application properties">
@@ -48,13 +61,47 @@
             </manifest>
         </jar>        
     </target>
-    <target name="deploy" depends="jar">
+    <target name="deploy" depends="clean, jar, doMac, doWindows, doUnix">
         <copy todir="dist/lib">
             <fileset dir="lib"/>
         </copy>
-        <copy file="config.properties" todir="dist"/>
-        <copy file="jcmd.sh" todir="dist"/>
     </target>
+    <!-- now create our operating system specific targets -->
+    <target name="doWindows" if="isWindows">
+    <echo message="Came into the Windows target" />
+    <echo file="dist/jcmd.bat" append="false">REM 
+java -cp "lib/*" -Dgov.nih.cit.soccer.wordnet.dir="${gov.nih.cit.soccer.wordnet.dir}" -Dgov.nih.cit.soccer.output.dir="${gov.nih.cit.soccer.output.dir}" gov.nih.cit.soccer.Soccer %1
+"${gov.nih.cit.soccer.rscript}" ${gov.nih.cit.soccer.r.file} %2 %3 
+    </echo>
+    <echo file="dist/config.properties" append="false"># Soccer Job Related. 
+# How often do you want your cmd execute
+interval_in_sec=10
+# Make sure your cmd is able to run properly in terminal,and then copy/paste here.
+full_cmd=jcmd.bat
+    </echo>
+    </target>
+    <target name="doUnix" if="isUnix">
+    <echo message="Came into the Unix target" />
+    <echo file="dist/jcmd.sh" append="false">#!/bin/bash
+if [ -e "$1" ]
+then
+java -cp "lib/*" -Dgov.nih.cit.soccer.wordnet.dir="${gov.nih.cit.soccer.wordnet.dir}" -Dgov.nih.cit.soccer.output.dir="${gov.nih.cit.soccer.output.dir}" gov.nih.cit.soccer.Soccer $1
+${gov.nih.cit.soccer.rscript} ${gov.nih.cit.soccer.r.file} $2 $3
+else
+echo "$1 does not exist!"
+fi
+    </echo>
+    <echo file="dist/config.properties" append="false"># Soccer Job Related. 
+# How often do you want your cmd execute
+interval_in_sec=10
+# Make sure your cmd is able to run properly in terminal,and then copy/paste here.
+full_cmd=jcmd.sh
+    </echo>
+    </target>   
+    <target name="doMac" if="isMac">
+    <echo message="*** This ant build does not support Mac yet *** " />    
+    <echo message="*** If you see this message, please stop and consult Help Desk *** " />    
+    </target> 
     <target name="clean">
         <delete includeEmptyDirs="true" quiet="true" dir="build"/>
         <delete includeEmptyDirs="true" quiet="true" dir="dist"/>
