Modified codes to comply with SOCcer-v0.0.2.jar

--- a/soccer/client/build.xml
+++ b/soccer/client/build.xml
@@ -73,7 +73,7 @@
     <target name="doWindows" if="isWindows">
     <echo message="Came into the Windows target" />
     <echo file="dist/jcmd.bat" append="false">REM 
-java -cp "lib/*" -Dgov.nih.cit.soccer.wordnet.dir="${gov.nih.cit.soccer.wordnet.dir}" -Dgov.nih.cit.soccer.output.dir="${tomee.dir}/webapps/soccer/files" gov.nih.cit.soccer.Soccer %1
+java -cp "lib/*" -Dgov.nih.cit.soccer.wordnet.dir="${gov.nih.cit.soccer.wordnet.dir}" -Dgov.nih.cit.soccer.output.dir="${tomee.dir}/webapps/soccer/files" gov.nih.cit.soccer.Soccer %1 2
 "${gov.nih.cit.soccer.rscript}" ${tomee.dir}/webapps/soccer/WEB-INF/classes/SoccerResultPlot.R %2 %3 
     </echo>
     <echo file="dist/config.properties" append="false"># Soccer Job Related. 
@@ -88,7 +88,7 @@ full_cmd=jcmd.bat
     <echo file="${deploy.target.dir}/jcmd.sh" append="false">#!/bin/bash
 if [ -e "$1" ]
 then
-java -cp "lib/*" -Dgov.nih.cit.soccer.wordnet.dir="${gov.nih.cit.soccer.wordnet.dir}" -Dgov.nih.cit.soccer.output.dir="${tomee.dir}/webapps/soccer/files" gov.nih.cit.soccer.Soccer $1
+java -cp "lib/*" -Dgov.nih.cit.soccer.wordnet.dir="${gov.nih.cit.soccer.wordnet.dir}" -Dgov.nih.cit.soccer.output.dir="${tomee.dir}/webapps/soccer/files" gov.nih.cit.soccer.Soccer $1 2
 ${gov.nih.cit.soccer.rscript} ${tomee.dir}/webapps/soccer/WEB-INF/classes/SoccerResultPlot.R $2 $3
 else
 echo "$1 does not exist!"
