--- a/soccer/client/build.xml
+++ b/soccer/client/build.xml
@@ -1,11 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project name="ComputingApp" default="default" basedir=".">
-    <exec executable="hostname" outputproperty="computer.hostname"/>
+<project name="ComputingApp" default="default" basedir=".">    
     <fail message="Please build using Ant 1.7.1 or higher.">
         <condition>
             <not>
                 <antversion atleast="1.7.1"/>
             </not>
+        </condition>
+    </fail>
+    <fail message="[Usage:] ant -Dsoccer.domain.name=soccer-dev.nci.nih.gov -Dtomee.dir=/local/content/tomee -Dsoccer.remote.web.port=80 -Dgov.nih.cit.soccer.wordnet.dir=/local/content/soccer/dict -Dgov.nih.cit.soccer.rscript=/usr/bin/Rscript -Ddeploy.target.dir=/local/content/soccer deploy">
+        <condition>
+            <or>
+                <not>
+                    <isset property="soccer.domain.name"/>
+                </not>
+                <not>
+                    <isset property="tomee.dir"/>
+                </not>
+                <not>
+                    <isset property="soccer.remote.web.port"/>
+                </not>
+                <not>
+                    <isset property="gov.nih.cit.soccer.wordnet.dir"/>
+                </not>
+                <not>
+                    <isset property="gov.nih.cit.soccer.rscript"/>
+                </not>
+                <not>
+                    <isset property="deploy.target.dir"/>
+                </not>
+            </or>            
         </condition>
     </fail>
     <!-- first create our properties -->
@@ -24,9 +47,9 @@
     <target name="pre-init">
         <propertyfile
             file="src/computingApp.properties" comment="Application properties">
-            <entry key="queue.remote.url" value="tcp://${computer.hostname}:61616?trace=false&amp;soTimeout=60000"/>
+            <entry key="queue.remote.url" value="tcp://${soccer.domain.name}:61616?trace=false&amp;soTimeout=60000"/>
             <entry key="queue.remote.name" value="soccerqueue"/>
-            <entry key="soccer.remote.web.host" value="${computer.hostname}"/>
+            <entry key="soccer.remote.web.host" value="${soccer.domain.name}"/>
             <entry key="soccer.remote.web.port" value="${soccer.remote.web.port}"/>
         </propertyfile>
     </target>
