modify build.xml to add function to generate SOCAssign.jnlp file.

--- a/soccer/webapp/build.xml
+++ b/soccer/webapp/build.xml
@@ -91,8 +91,9 @@
         </javac>
         <copy file="src/java/applicationQueue.properties" todir="build/classes"/>
         <copy file="src/SoccerResultPlot.R" todir="build/classes"/>
+        <antcall target="generateJNLP"/>
     </target>
-    <target name="war" depends="compile">
+    <target name="war" depends="url_exist,compile">
         <war needxmlfile="false"
                 destfile="dist/${ant.project.name}.war">
             <fileset dir="web"/>
@@ -110,4 +111,10 @@
         <copy file="dist/tomee.xml" todir="${tomee.dir}/conf"/>
     </target>
     <target name="default" depends="clean, war, setting"/>
+    <target name="url_exist" unless="url">
+          <fail> URL is not set, stop</fail>
+    </target>
+    <target name="generateJNLP">
+    	<replace file="SOCAssign.jnlp" token="@url@" value="${url}"/>
+    </target>
 </project>
